# cmake-sbom

./: .cmake-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.rst  REUSE.toml  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  scorecard.yml
cmake/: cpe.cmake  git_version.cmake  git_version.h.in  git_version.sh.in  sbom.cmake  version.cmake  version.sh.in
example/: .gitignore  CMakeLists.txt  README.rst  example.cpp
example/output/: sbom-1.0.0.spdx  sbom-1.1.2.spdx  sbom-1.3.0.spdx
test/: C.cmake  CMakeLists.txt  CXX.cmake  C_CXX.cmake  cpe.cmake  destdir.cmake  dir.cmake  env_version.cmake  external.cmake  file.cmake  full_doc.cmake  input_doc.cmake  input_doc.spdx.in  minimal.cmake  minimal2.cmake  modular.cmake  package.cmake  spdx_version.cmake  target.cmake  version.cmake
test/modular/module_A/: CMakeLists.txt  module_A.c
test/modular/module_B/: CMakeLists.txt  module_B.c  module_B_main.c
test/modular/module_C/: CMakeLists.txt  module_C.c
test/modular/module_D/: CMakeLists.txt  module_D.c  module_D_main.c
